sql/sql_select.cc
@@ -1209,6 +1209,11 @@ int
 JOIN::reinit()
 {
   DBUG_ENTER("JOIN::reinit");
+
+  unit->offset_limit_cnt= (ha_rows)(select_lex->offset_limit ?
+                                    select_lex->offset_limit->val_uint() :
+                                    ULL(0));
+
   first_record= 0;
 
   if (exec_tmp_table1)
